# clion-test-summer19

./: .gitignore  CMakeLists.txt
HomeAutomation_lib/: CMakeLists.txt  LightController.c  LightController.h  LightScheduler.c  LightScheduler.h  TimeService.c  TimeService.h
LedDriver_lib/: CMakeLists.txt  LedDriver.h
inc/: main.h
src/: LedDriver.c
test/: CMakeLists.txt  FakeTimeService.c  FakeTimeService.h  FakeTimeServiceTest.cpp  LedDriverTest.cpp  LightControllerSpy.c  LightControllerSpy.h  LightControllerSpyTest.cpp  LightSchedulerTest.cpp
